@@ -16,6 +16,8 @@ $magicWords['en'] = array(
 	'show' => array( 0, 'show' ),
 	'info' => array( 0, 'info' ),
 	'concept' => array( 0, 'concept' ),
+    'subobject' => array( 0, 'subobject' ),
+    'smwdoc' => array( 0, 'smwdoc' ),
 	'set' => array( 0, 'set' ),
 	'set_recurring_event' => array( 0, 'set_recurring_event' ),
 	'declare' => array( 0, 'declare' ),
